# ai-hedge-fund

./: README.md  pyproject.toml
app/: README.md
app/backend/: README.md
