[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using multiple specialized agents"
authors = ["virattt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langchain-groq = "^0.1.0"
langgraph = "^0.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
yfinance = "^0.2.40"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
tabulate = "^0.9.0"
requests = "^2.31.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[tool.poetry.group.app.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
